arreglillo nombre funciones

--- a/Notebooks/Foursquare_geoquery_map.ipynb
+++ b/Notebooks/Foursquare_geoquery_map.ipynb
@@ -23,7 +23,7 @@
     "from folium import Choropleth, Circle, Marker, Icon, Map\n",
     "from folium.plugins import HeatMap, MarkerCluster\n",
     "\n",
-    "import src.functions as func"
+    "import src.API_functions as func"
    ]
   },
   {
